<resources>
    <string name="app_name">NotesApplication</string>
    <string name="map_item_label">Map</string>
    <string name="list_item_label">List</string>
    <string name="title_label">Title</string>
    <string name="body_label">Body</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_label">LOGIN</string>
    <string name="signUp_label">signup?</string>
    <string name="register_label">Register</string>
    <string name="email_ask">please enter your email :</string>
    <string name="password_ask">please enter password :</string>
    <string name="email_ask_confirm">please enter password again :</string>
    <string name="list_empty">There are no notes in the list ! please enter on add new note button.. </string>
</resources>