<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lite_pink"
    android:gravity="center_vertical"
    android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_login_LBL_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_label"
        android:padding="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_login_LBL_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_label"
        android:padding="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_login_BTN_submit"
        android:layout_width="170dp"
        android:layout_height="72dp"
        android:layout_below="@id/activity_login_LBL_password"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:backgroundTintMode="add"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login_label"
        android:textSize="21sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_LBL_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_login_BTN_submit"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="170dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/signUp_label"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />
</LinearLayout>